Fix profile on iOS and fix selling page for smaller devices

--- a/ESE-2019-Project/frontend/src/app/shared/components/image-picker/image-picker.component.scss
+++ b/ESE-2019-Project/frontend/src/app/shared/components/image-picker/image-picker.component.scss
@@ -8,7 +8,7 @@
 }
 
 .profilePicker {
-  heigth: 100%;
+  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
